backend returns timer
client uses the backend timer to reset the countdown
refactors Timer.vue, pulls out logic into store
